@@ -3,6 +3,7 @@ Version 0.2.0+dev
 - added dependency on symfony/options-resolver
 - it is now possible to include stylesheets and scripts in generated pages
 - Generator no longer tries to guess source and output folders
+- added events onBeforeGenerate and onAfterGenerate to Generator
 
 Version 0.2.0
 - raised minimal version of PHP to 7
